-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.17.0, Lustre 2.15.7
-
RHEL8 debug kernel running pdfstest test
-
3
-
9223372036854775807
Oleg's RHLE8 debug setup sees the following failure.
== run_pjdfstest test chmod_02: chmod returns ENAMETOOLONG if a component of a pathname exceeded \{NAME_MAX} characters === 10:00:33
Run /usr/share/pjdfstest/chmod/02.t against ext4 filesystem
prove -f /usr/share/pjdfstest/chmod/02.t &> /tmp/pjdfstest-ext4
Run /usr/share/pjdfstest/chmod/02.t against lustre filesystem
lfs mkdir: dirstripe error on '/mnt/lustre/pjdfstest': stripe already set
lfs setdirstripe: cannot create dir '/mnt/lustre/pjdfstest': File exists
prove -f /usr/share/pjdfstest/chmod/02.t &> /tmp/pjdfstest-lustre
ext4 report
/usr/share/pjdfstest/chmod/02.t .. ok
All tests successful.
Files=1, Tests=5, 3 wallclock secs ( 0.05 usr 0.02 sys + 0.10 cusr 1.08 csys = 1.25 CPU) Result: PASS
lustre report /usr/share/pjdfstest/chmod/02.t ..
not ok 5 - tried 'chmod 69e00cf29204f42d5271017e619f9e726949887fc30437c9d7bf6ef841d5675998586322f182567bd51832542773da1a6446af072a67c42e5ade58a5897ea7aa9fe967a44e8f89312bd45fcab7ee2f38ce8503b80cf3428771fd3fd9a43832190da80bd43682353e47aff2168f4422fd27647dcea3f1b85a7d22c21dd9b72e2x 0620', expected ENAMETOOLONG, got ENOENT
Failed 1/5 subtests
Test Summary Report
-------------------
/usr/share/pjdfstest/chmod/02.t (Wstat: 0 Tests: 5 Failed: 1)
Failed test: 5 Files=1, Tests=5, 2 wallclock secs ( 0.04 usr 0.02 sys + 0.10 cusr 0.98 csys = 1.14 CPU)
Result: FAIL run_pjdfstest test_chmod_02: @@@@@@ FAIL: /usr/share/pjdfstest/chmod/02.t against lustre failed
- is related to
-
LU-19208 lmm_stripe_count: 0 in DoM component triggers divide-by-zero in MPIIO
-
- Open
-
-
LU-19232 sanity test_110: FAIL: mkdir with 256 char should fail, but did not
-
- Resolved
-
-
LU-20457 add test case try rename with name longer than NAME_MAX
-
- Open
-
- is related to
-
LU-1580 POSIX: pathconf.32: pathconf("/dev/pts/0", _PC_NAME_MAX) did not give correct results
-
- Resolved
-
-
LU-3587 CR_MAXSIZE is too small
-
- Resolved
-
-
LU-4219 posix test_1: fpathconf.8 and pathconf.10 failed: did not return the value of NAME_MAX
-
- Resolved
-
-
LU-18803 remove hard-coded NAME_MAX from client and server
-
- Reopened
-
-
LU-18515 Support ZFS 2.3.0
-
- Resolved
-
-
DDN-6932 Loading...
-
DDN-7033 Loading...