lustre/llite/llite_lib.c
@@ -487,7 +487,7 @@ retry_connect:
 	sb->s_magic = LL_SUPER_MAGIC;
 	sb->s_maxbytes = MAX_LFS_FILESIZE;
 	sbi->ll_inode_cache_enabled = 1;
-	sbi->ll_namelen = osfs->os_namelen;
+	sbi->ll_namelen = min_t(u32, osfs->os_namelen, NAME_MAX);
 	sbi->ll_mnt.mnt = current->fs->root.mnt;
 	sbi->ll_mnt_ns = current->nsproxy->mnt_ns;
 
@@ -2703,6 +2703,7 @@ int ll_statfs(struct dentry *de, struct kstatfs *sfs)
 	sfs->f_bavail = osfs.os_bavail;
 	sfs->f_fsid.val[0] = (__u32)fsid;
 	sfs->f_fsid.val[1] = (__u32)(fsid >> 32);
+	sfs->f_namelen = sbi->ll_namelen;
 	if (ll_i2info(de->d_inode)->lli_projid &&
 		test_bit(LL_SBI_STATFS_PROJECT, sbi->ll_flags) &&
 	    test_bit(LLIF_PROJECT_INHERIT, &ll_i2info(de->d_inode)->lli_flags))
